# movie-site

./: .gitignore  README.md  docker-compose.yml  render.yaml
.claude/: launch.json
.github/workflows/: ci.yml
api/: pyproject.toml
api/alembic/versions/: 0002_letterboxd_film_stats.py
api/app/: config.py  main.py
api/app/db/: tables.py
api/app/domain/: discover.py  enrich.py  letterboxd_export.py  match.py  matching.py  recommend.py  taste.py
api/app/integrations/: letterboxd.py  letterboxd_profile.py  progress.py  tmdb.py
api/app/repositories/: film_repo.py  profile_repo.py  recommend_repo.py  taste_repo.py
api/app/routers/: feedback.py  imports.py  profiles.py  recommendations.py
api/app/schemas/: models.py
api/app/scripts/: lb_enrich.py  seed_corpus.py
api/app/services/: import_pipeline.py  recommend_service.py  taste_service.py
api/scripts/: seed_catalog.py
api/tests/: test_enrich.py  test_export.py  test_import_chunking.py  test_import_merge.py  test_matching.py  test_recommend.py  test_smoke.py  test_taste.py
api/tests/fixtures/: movie_550.json
api/workers/: arq_app.py
docs/: DEPLOYMENT.md  PHASE0_SCAFFOLDING.md  PLAN.md  RECOMMENDATION_MATH.md
web/: biome.json  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/layout/: Navbar.tsx
web/components/recs/: MarqueeBanner.tsx  PosterRow.tsx  RecCard.tsx  RecRow.tsx
web/components/taste/: AffinityBars.tsx  FilterContext.tsx  (+2 more)
web/lib/: api.ts  countries.ts  pastels.ts  semantic.ts  settings.ts  useImportProgress.ts
(+13 files in other folders)
